--- a/client/src/App.css
+++ b/client/src/App.css
@@ -47,6 +47,11 @@
   height: 13px;
 }
 
+.smallScrollBar::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
 /* Track */
 ::-webkit-scrollbar-track {
   /* box-shadow: inset 0 0 5px grey;  */
